--- a/themes.html
+++ b/themes.html
@@ -25,7 +25,25 @@
 
 <!-- Setup Google Analytics -->
 <style>
-body{font-size:16px;line-height:1.5;word-wrap:break-word}blockquote{padding:0 1em;color:#8b949e;border-left:.25em solid #30363d}blockquote{margin:0}blockquote{display:block;margin-block-start:1em;margin-block-end:1em;margin-inline-end:40px}
+body {
+    font-size: 16px;
+    line-height: 1.5;
+    word-wrap: break-word;
+}
+blockquote {
+    padding: 0 1em;
+    color: #8b949e;
+    border-left: .25em solid #30363d;
+}
+blockquote {
+    margin: 0;
+}
+blockquote {
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-end: 40px;
+}
 body{
 --font: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
 --bg: #0d1117;
