--- a/themes.html
+++ b/themes.html
@@ -61,7 +61,7 @@ h5{color:var(--fg)}
 h6{color:var(--fg)}
 .newblockquote {background-color: rgba(255, 255, 255, 0.1);border-left: 5px solid  rgba(255, 255, 255, 0.288); padding-left: 5px; margin-bottom: 5px;padding-right: 7.5px;}
 ::-webkit-scrollbar{width:15px}::-webkit-scrollbar-track{border-radius:5px;background:#3f3f3f}::-webkit-scrollbar-thumb{background:#707070;border-radius:5px}
-
+.mono{font-family:monospace;}
 </style>
 
 
@@ -110,12 +110,12 @@ using a diffrent rule or the same.</p>
 <h1 id="themes">Downloads</h1>
 <p>Themes, fonts and other links</p>
 <div class="newblockquote">
-<a href="/themes/theme-dark-blue.css" target="_blank" download>Dark-blue theme</a>              <br>
-<a href="/themes/theme-green.css" target="_blank" download>Green theme</a>                      <br>
-<a href="/themes/theme-magenta.css" target="_blank" download>Magenta theme</a>                  <br>
-<a href="/themes/theme-purple.css" target="_blank" download>Purple theme</a>                    <br>
-<a href="/themes/theme-red.css" target="_blank" download>Red theme</a>                          <br>
-<a href="/themes/font-monospace.css" target="_blank" download><code>Monospace</code> font</a>   <br>
+<a href="/themes/theme-dark-blue.css" target="_blank" download>Dark-blue theme</a>                                 <br>
+<a href="/themes/theme-green.css" target="_blank" download>Green theme</a>                                         <br>
+<a href="/themes/theme-magenta.css" target="_blank" download>Magenta theme</a>                                     <br>
+<a href="/themes/theme-purple.css" target="_blank" download>Purple theme</a>                                       <br>
+<a href="/themes/theme-red.css" target="_blank" download>Red theme</a>                                             <br>
+<a href="/themes/font-monospace.css" target="_blank" download><div class="mono">Monospace</div> font</a>           <br>
 </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
     <script>anchors.add();</script>
