--- a/themes.html
+++ b/themes.html
@@ -32,8 +32,8 @@ body {
 }
 blockquote {
     padding: 0 1em;
-    color: #8b949e;
-    border-left: .25em solid #30363d;
+    color: #8b949e!IMPORTANT;
+    border-left: .25em solid #30363d!IMPORTANT;
 }
 blockquote {
     margin: 0;
@@ -53,10 +53,10 @@ body{
 a{color: #58a6ff;text-decoration: none;}
 body{background-color: var(--bg);font-family: var(--font);}
 p{color:var(--fg)}
-h1{color:var(--fg);border-bottom: 1px solid var(--color-border-muted);}
-h2{color:var(--fg);border-bottom: 1px solid var(--color-border-muted);}
-h3{color:var(--fg);border-bottom: 1px solid var(--color-border-muted);}
-h4{color:var(--fg);border-bottom: 1px solid var(--color-border-muted);}
+h1{color:var(--fg);border-bottom: 1px solid var(--color-border-muted)!IMPORTANT;}
+h2{color:var(--fg);border-bottom: 1px solid var(--color-border-muted)!IMPORTANT;}
+h3{color:var(--fg);border-bottom: 1px solid var(--color-border-muted)!IMPORTANT;}
+h4{color:var(--fg);border-bottom: 1px solid var(--color-border-muted)!IMPORTANT;}
 h5{color:var(--fg)}
 h6{color:var(--fg)}
 .newblockquote {background-color: rgba(255, 255, 255, 0.1);border-left: 5px solid  rgba(255, 255, 255, 0.288); padding-left: 5px; margin-bottom: 5px;padding-right: 7.5px;}
