final monospace font fix

--- a/themes.html
+++ b/themes.html
@@ -115,7 +115,7 @@ using a diffrent rule or the same.</p>
 <a href="/themes/theme-magenta.css" target="_blank" download>Magenta theme</a>                                     <br>
 <a href="/themes/theme-purple.css" target="_blank" download>Purple theme</a>                                       <br>
 <a href="/themes/theme-red.css" target="_blank" download>Red theme</a>                                             <br>
-<a href="/themes/font-monospace.css" target="_blank" download><div class="mono">Monospace</div> font</a>           <br>
+<a href="/themes/font-monospace.css" target="_blank" download class="mono">Monospace font</a>                      <br>
 </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
     <script>anchors.add();</script>
